# Milestone

./: .env  .gitignore  Cargo.toml  IdeasSuggestionsConcerns.txt  README.md  log4rs_config.yaml  log_reader.py  weights_formatter.py
aux_scripts/: heuristic_elo_correlation.ipynb  win_performance.ipynb
benches/: my_benchmark.rs
data/: Corban_logreader.ipynb  README.md  exp2.best_agents  exp3.best_agents  exp_comparison.csv
data/every_five/: exp2.agents  exp2_agent_comparison.csv  exp3.agents  exp3_agent_comparison.csv
data/every_four_matrix/: data_vis.ipynb  exp2.agents  exp2_agent_comparison.csv  exp3.agents  exp3_agent_comparison.csv
data/every_ten/: exp2.agents  exp2_agent_comparison.csv  exp3.agents  exp3_agent_comparison.csv
data/every_twenty/: exp2.agents  exp2_agent_comparison.csv  exp3.agents  exp3_agent_comparison.csv
data/every_two/: exp2.agents  exp2_agent_comparison.csv  exp3.agents  exp3_agent_comparison.csv
data/exp_comparison/: comparison_file.csv  data_vis.ipynb  exp_comparison.csv  heuristic_vis.ipynb
graphs/Black vs White Performance/: Exp_2_and_3.xlsx
neuralnet/: exp2.joblib  exp3.joblib  neural net.ipynb  neural_net.ipynb  neural_net.py  neural_network.py  nn.joblib  train.ipynb  train.py
python helper files/: heuristic_elo_correlation.ipynb  heuristic_elo_parser.py  win_performance.ipynb
src/: data.rs  lib.rs  main.rs
src/ai/: genetic.rs  heuristics.rs  location_maps.rs  mod.rs  tree.rs  tree_tests.rs
src/cli/: mod.rs
src/database/: example.sqlite3
src/game/: board.rs  gamestate.rs  mod.rs  pieces.rs  player.rs
(+3 files in other folders)
