[package]
name = "milestone"
version = "0.1.0"
edition = "2021"

[lib]
name = "milestone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
separator = "0.4.1"
petgraph = "0.6.3"
lazy_static = "1.4.0"
enum_dispatch = "0.3.11"
rand = "0.8"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
rayon = "1.3.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
